# permirust

./: Cargo.toml  Makefile  README.md  TODO.txt
lib/pg-scripts/: init-user-db.sh
resources/: spec.yml
src/: analyzer.rs  attributes.rs  context.rs  diff.rs  generate.rs  grants.rs  lib.rs  main.rs  postgres.rs  queries.rs  spec.rs
src/adapters/: fakedb.rs  mod.rs  postgres.rs
src/archive/: diff.rs  grants.rs
tests/: generator.rs
